test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/libraries/external_tentative_var_client.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: read_x
        List[0]: 
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[5]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  None: 
                  Int: 
                  CExtern: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CVar: 
                    TIdentifier: x
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 0
                    None: 
                  None: 
                CReturn: 
                  CConstant: 
                    CConstInt: 
                      TInt: 1
                    None: 
                None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CVar: 
                    TIdentifier: x
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 3
                    None: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CFunctionCall: 
                    TIdentifier: read_x
                    List[0]: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 3
                    None: 
                  None: 
                CReturn: 
                  CConstant: 
                    CConstInt: 
                      TInt: 1
                    None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
